--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <!-- <link rel="icon" href="%PUBLIC_URL%/fluffycoin.png" /> -->
+    <link rel="icon" href="%PUBLIC_URL%/happy.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="English Presentations Done by LS of 2021-2022."
+      content="English Presentations Done by LS, GS, SE of 2021-2022."
     />
-    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/fluffycoin.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/happy.png" />
+
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
     <title>English Presentations</title>
   </head>
