--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="English Presentations Done by LS, GS, SE of 2021-2022."
+      content="English Presentations Done by LS, GS, SE of 2021-2022 by Abed Al Ghani Shaaban"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/happy.png" />
 
